--- a/sass/main.scss
+++ b/sass/main.scss
@@ -9,6 +9,7 @@
 
 @import "./components/logo";
 @import "./components/modal-btn";
+@import "./components/mobile-menu";
 @import "./components/social-link";
 @import "./components/modal-window";
 @import "./components/modal-form";
