--- a/css/main.css
+++ b/css/main.css
@@ -3,7 +3,7 @@
   --secondary-font: "Raleway", sans-serif;
   --accent-color: rgba(33, 150, 243, 1);
   --primary-color: rgba(33, 33, 33, 1);
-  --secondary-color: rgba(117, 117, 117, 1);
+  --secondary-color: rgba(117, 117, 117,1);
   --third-color: rgba(255, 255, 255, 1);
 }
 
@@ -65,38 +65,38 @@ img {
 }
 
 .conteiner {
-  margin: 0 auto;
-  width: 1200px;
+  padding-left: 15px;
+  padding-right: 15px;
 }
 .header .conteiner {
   display: flex;
+  justify-content: space-between;
   align-items: center;
-  padding: 0 15px;
-  border-top: none;
-  min-height: 80px;
-}
-.hero .conteiner {
-  padding-top: 200px;
-  padding-bottom: 200px;
-}
-.team .conteiner, .clients .conteiner, .portfolio .conteiner {
-  padding: 94px 15px;
-}
-.footer .conteiner {
-  padding: 60px 15px;
-  display: flex;
-  align-items: baseline;
 }
 
+@media screen and (min-width: 480px) {
+  .conteiner {
+    width: 480px;
+    margin: 0 auto;
+  }
+}
+@media screen and (min-width: 768px) {
+  .conteiner {
+    width: 768px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .conteiner {
+    width: 1200px;
+  }
+}
 .logo {
   font-family: var(--secondary-font);
   font-weight: 700;
-  font-size: 26px;
-  line-height: 1.19;
+  font-size: 24px;
+  line-height: 1.17;
   letter-spacing: 0.03em;
   color: var(--accent-color);
-  margin-right: 93px;
-  transition: text-decoration 1000ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .logo:hover, .logo:focus {
   text-decoration: underline;
@@ -133,6 +133,109 @@ img {
 }
 .modal-btn:hover, .modal-btn:focus {
   background-color: rgb(24, 140, 232);
+}
+
+.mobile-menu {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  padding: 48px 40px;
+  background-color: var(--third-color);
+  transform: translateY(-100%);
+  transition: transform 250ms linear;
+  overflow: scroll;
+}
+
+.mobile-menu__button {
+  position: absolute;
+  background-color: transparent;
+  border: none;
+  padding: 0;
+  transition: fill 250ms linear;
+  top: 10px;
+  right: 15px;
+}
+.mobile-menu__button:hover, .mobile-menu__button:focus {
+  fill: var(--accent-color);
+}
+
+.mobile-menu__icon {
+  width: 40px;
+  height: 40px;
+}
+
+.is-open {
+  transform: translateY(0);
+}
+
+.mobile-menu-navigation__list {
+  margin-bottom: 302px;
+}
+
+.mobile-menu-navigation__item:not(:last-child) {
+  margin-bottom: 32px;
+}
+
+.mobile-menu-navigation__link {
+  font-family: var(--main-font);
+  font-weight: 500;
+  font-size: 40px;
+  line-height: 1.17;
+  letter-spacing: 0.02em;
+  color: #212121;
+}
+
+.mobile-menu-navigation__link--active-link {
+  color: var(--accent-color);
+}
+
+.mobile-menu-contacts {
+  margin-bottom: 64px;
+}
+
+.mobile-menu-contacts__item:not(:last-child) {
+  margin-bottom: 32px;
+}
+
+.mobile-menu-contacts__tel-link {
+  font-family: var(--main-font);
+  font-weight: 500;
+  font-size: 34px;
+  line-height: 1.18;
+  letter-spacing: 0.02em;
+  color: var(--accent-color);
+}
+
+.mobile-menu-contacts__email-link {
+  font-family: var(--main-font);
+  font-weight: 500;
+  font-size: 24px;
+  line-height: 1.17;
+  letter-spacing: 0.02em;
+  color: var(--secondary-color);
+}
+
+.mobile-menu-social {
+  display: flex;
+}
+
+.mobile-menu-social__item:not(:first-child) {
+  margin-left: 10px;
+}
+.mobile-menu-social__item:not(:last-child) {
+  padding-right: 10px;
+  border-right: 1px solid rgba(33, 33, 33, 0.2);
+}
+
+.mobile-menu-social__link {
+  font-family: var(--main-font);
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 1.22;
+  letter-spacing: 0.02em;
+  color: var(--accent-color);
 }
 
 .social-links {
@@ -395,6 +498,31 @@ img {
 
 .email-form__icon {
   margin-left: 10px;
+}
+
+.navigation__list,
+.contacts-list {
+  display: none;
+}
+
+.header {
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+
+.burger-button {
+  background-color: transparent;
+  border: none;
+  padding: 0;
+  transition: fill 250ms linear;
+}
+.burger-button:focus, .burger-button:hover {
+  fill: var(--accent-color);
+}
+
+.burger-button__icon {
+  width: 40px;
+  height: 40px;
 }
 
 .hero {
