--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -3,7 +3,7 @@
   --secondary-font: "Raleway", sans-serif;
   --accent-color: rgba(33, 150, 243, 1);
   --primary-color: rgba(33, 33, 33, 1);
-  --secondary-color: rgba(117, 117, 117, 1);
+  --secondary-color: rgba(117, 117, 117,1);
   --third-color: rgba(255, 255, 255, 1);
 }
 
@@ -49,38 +49,38 @@ img {
 }
 
 .conteiner {
-  margin: 0 auto;
-  width: 1200px;
+  padding-left: 15px;
+  padding-right: 15px;
 }
 .header .conteiner {
   display: flex;
+  justify-content: space-between;
   align-items: center;
-  padding: 0 15px;
-  border-top: none;
-  min-height: 80px;
-}
-.hero .conteiner {
-  padding-top: 200px;
-  padding-bottom: 200px;
-}
-.team .conteiner, .clients .conteiner, .portfolio .conteiner {
-  padding: 94px 15px;
-}
-.footer .conteiner {
-  padding: 60px 15px;
-  display: flex;
-  align-items: baseline;
 }
 
+@media screen and (min-width: 480px) {
+  .conteiner {
+    width: 480px;
+    margin: 0 auto;
+  }
+}
+@media screen and (min-width: 768px) {
+  .conteiner {
+    width: 768px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .conteiner {
+    width: 1200px;
+  }
+}
 .logo {
   font-family: var(--secondary-font);
   font-weight: 700;
-  font-size: 26px;
-  line-height: 1.19;
+  font-size: 24px;
+  line-height: 1.17;
   letter-spacing: 0.03em;
   color: var(--accent-color);
-  margin-right: 93px;
-  transition: text-decoration 1000ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .logo:hover, .logo:focus {
   text-decoration: underline;
@@ -195,6 +195,31 @@ img {
 
 .email-form__icon {
   margin-left: 10px;
+}
+
+.navigation__list,
+.contacts-list {
+  display: none;
+}
+
+.header {
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+
+.burger-button {
+  background-color: transparent;
+  border: none;
+  padding: 0;
+  transition: fill 250ms linear;
+}
+.burger-button:focus, .burger-button:hover {
+  fill: var(--accent-color);
+}
+
+.burger-button__icon {
+  width: 40px;
+  height: 40px;
 }
 
 .filter-button-set {
