--- a/sass/layout/_header.scss
+++ b/sass/layout/_header.scss
@@ -1,3 +1,27 @@
+.navigation__list,
+.contacts-list{
+display: none;
+}
+.header{
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+.burger-button{
+    background-color: transparent;
+    border: none;
+    padding: 0;
+    transition: fill 250ms linear;
+
+        &:focus,
+        &:hover {
+            fill: var(--accent-color);
+        }
+}
+.burger-button__icon{
+    width: 40px;
+    height: 40px;
+}
+
 // .header {
 // border-bottom: 1px solid rgba(236, 236, 236, 1);
 // }
