--- a/sass/base/_conteiner.scss
+++ b/sass/base/_conteiner.scss
@@ -22,6 +22,10 @@
 @media screen and (min-width: 1200px) {
     .conteiner{
         width: 1200px;
+
+            .header &{
+                align-items: baseline;
+            }
     }
 }
 
