--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -44,6 +44,8 @@
 }
 @media screen and (min-width: 1200px){
     .hero{
+        padding-top: 200px;
+        padding-bottom: 200px;
         min-width: 1200px;
         background-image: linear-gradient(rgba(47, 48, 58, 0.4),rgba(47, 48, 58, 0.4)), 
         url("../images/hero/herobg-desktop.jpg");
