--- a/css/main.css
+++ b/css/main.css
@@ -790,45 +790,48 @@ img {
     width: 270px;
   }
 }
-.development__title {
-  font-weight: 700;
-  font-size: 36px;
-  line-height: 1.17;
-  text-align: center;
-  letter-spacing: 0.03em;
-  padding-bottom: 50px;
+.development {
+  display: none;
 }
 
-.development__list {
-  display: flex;
-  padding-left: 15px;
-  padding-right: 15px;
-  padding-bottom: 94px;
+@media screen and (min-width: 1200px) {
+  .development {
+    display: block;
+  }
+  .development__title {
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 1.17;
+    text-align: center;
+    letter-spacing: 0.03em;
+    margin-bottom: 50px;
+  }
+  .development__list {
+    display: flex;
+    margin-bottom: 94px;
+  }
+  .development__item {
+    position: relative;
+  }
+  .development__item:not(:last-child) {
+    margin-right: 30px;
+  }
+  .development__text {
+    position: absolute;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.14;
+    text-align: center;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: var(--third-color);
+    width: 100%;
+    height: 70px;
+    background-color: rgba(47, 48, 58, 0.8);
+    bottom: 0;
+    padding-top: 27px;
+  }
 }
-
-.development__item {
-  position: relative;
-}
-.development__item:not(:last-child) {
-  margin-right: 30px;
-}
-
-.development__text {
-  position: absolute;
-  font-weight: 700;
-  font-size: 14px;
-  line-height: 1.14;
-  text-align: center;
-  letter-spacing: 0.03em;
-  text-transform: uppercase;
-  color: var(--third-color);
-  width: 100%;
-  height: 70px;
-  background-color: rgba(47, 48, 58, 0.8);
-  bottom: 0;
-  padding-top: 27px;
-}
-
 .team {
   background-color: #F5F4FA;
 }
