--- a/css/main.css
+++ b/css/main.css
@@ -560,7 +560,6 @@ img {
     margin-right: 50px;
   }
   .navigation__link {
-    font-family: var(--main-font);
     font-weight: 500;
     font-size: 14px;
     line-height: 1.14;
@@ -592,7 +591,6 @@ img {
     margin-bottom: 10px;
   }
   .contacts-list__link {
-    font-family: var(--main-font);
     font-weight: 500;
     font-size: 12px;
     line-height: 1.17;
@@ -653,7 +651,6 @@ img {
   padding-bottom: 118px;
   background-color: rgb(196, 196, 196);
   background-image: linear-gradient(rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4)), url("../images/hero/herobg-mobile.jpg");
-  min-width: 480px;
   background-size: cover;
   background-repeat: no-repeat;
   margin-left: auto;
@@ -666,7 +663,7 @@ img {
 }
 
 .hero__title {
-  font-family: var(--main-font);
+  margin: 0 auto;
   font-weight: 900;
   font-size: 26px;
   line-height: 1.61;
@@ -674,11 +671,18 @@ img {
   letter-spacing: 0.06em;
   text-transform: uppercase;
   color: #FFFFFF;
-  width: 360px;
-  margin: 0 auto;
   margin-bottom: 30px;
 }
 
+@media screen and (min-width: 480px) {
+  .hero {
+    min-width: 480px;
+  }
+  .hero__title {
+    width: 360px;
+    margin: auto;
+  }
+}
 @media screen and (min-width: 768px) {
   .hero {
     min-width: 768px;
@@ -741,7 +745,6 @@ img {
 }
 
 .benefits-list__title {
-  font-family: var(--main-font);
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
@@ -752,7 +755,6 @@ img {
 }
 
 .benefits-list__text {
-  font-family: var(--main-font);
   font-size: 14px;
   line-height: 1.71;
   letter-spacing: 0.03em;
@@ -834,51 +836,23 @@ img {
 }
 .team {
   background-color: #F5F4FA;
+  padding-top: 60px;
+  padding-bottom: 60px;
 }
 
 .team__title {
   font-weight: 700;
-  font-size: 36px;
-  line-height: 1.17;
+  font-size: 28px;
+  line-height: 1.18;
   text-align: center;
   letter-spacing: 0.03em;
-  padding-bottom: 50px;
-}
-
-.team-card {
-  display: flex;
+  margin-bottom: 30px;
 }
 
 .team-card__item {
-  background-color: var(--third-color);
-  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
-  border-radius: 0px 0px 4px 4px;
-}
-.team-card__item:not(:last-child) {
-  margin-right: 30px;
-}
-
-.team-card__conteiner {
-  padding-top: 30px;
-  padding-bottom: 30px;
-}
-
-.team-card__title {
-  font-weight: 500;
-  font-size: 16px;
-  line-height: 1.19;
-  text-align: center;
-  letter-spacing: 0.03em;
-  margin-bottom: 10px;
-}
-
-.team-card__text {
-  font-size: 16px;
-  line-height: 1.19;
-  text-align: center;
-  letter-spacing: 0.03em;
-  color: var(--secondary-color);
-  margin-bottom: 16px;
+  width: 450px;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .clients__title {
