--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -261,6 +261,7 @@ img {
     line-height: 1.14;
     letter-spacing: 0.02em;
     color: #212121;
+    transition: color 250ms linear;
   }
   .navigation__link:hover, .navigation__link:focus {
     color: var(--accent-color);
@@ -292,14 +293,18 @@ img {
     line-height: 1.17;
     letter-spacing: 0.02em;
     color: var(--secondary-color);
-    fill: var(--secondary-color);
+    transition: color 250ms linear;
   }
   .contacts-list__link:hover, .contacts-list__link:focus {
     color: var(--accent-color);
-    fill: var(--accent-color);
   }
   .contacts-list__icon {
     margin-right: 8px;
+    fill: var(--secondary-color);
+    transition: fill 250ms linear;
+  }
+  .contacts-list__link:hover .contacts-list__icon, .contacts-list__link:focus .contacts-list__icon {
+    fill: var(--accent-color);
   }
   .contacts-list__icon-email {
     width: 14px;
