--- a/sass/layout/_benefits.scss
+++ b/sass/layout/_benefits.scss
@@ -1,11 +1,7 @@
 .benefits{
-    padding-top: 60px;
-    padding-bottom: 60px;
-    margin-left: auto;
-    margin-right: auto;
+    margin-bottom: 60px;
 }
 .benefits-list__item{
-    width: 450px;
 
         &:not(:last-child){
             margin-bottom: 30px;
@@ -13,12 +9,11 @@
 }
 .benefits-list__conteiner{
     display: flex;
-    width: 450px;
-    height: 120px;
     background-color: rgba(245, 244, 250, 1);
     border-radius: 4px;
     align-items: center;
     justify-content: center;
+    height: 120px;
     margin-bottom: 30px;
 }
 .benefits-list__icon{
@@ -39,6 +34,14 @@ font-size: 14px;
 line-height: 1.71;
 letter-spacing: 0.03em;
 color: var(--secondary-color);
+}
+@media screen and (min-width: 480px){
+    .benefits-list__item{
+        width: 450px;
+    }
+    .benefits-list__conteiner{
+        width: 450px;
+    }
 }
 @media screen and (min-width: 768px) {
     .benefits-list{
@@ -61,8 +64,7 @@ color: var(--secondary-color);
 }
 @media screen and (min-width: 1200px){
     .benefits{
-    padding-top: 94px;
-    padding-bottom: 94px;
+    margin-bottom: 94px;
     }
     .benefits-list__item{
         width: 270px;
