--- a/sass/layout/_hero.scss
+++ b/sass/layout/_hero.scss
@@ -1,22 +1,21 @@
 .hero{
     padding-top: 118px;
     padding-bottom: 118px;
+    margin-bottom: 60px;
     background-color: rgba(196, 196, 196, 1);
     background-image: linear-gradient(rgba(47, 48, 58, 0.4),rgba(47, 48, 58, 0.4)), 
     url("../images/hero/herobg-mobile.jpg");
     background-size: cover;
     background-repeat: no-repeat;
-    margin-left: auto;
-    margin-right: auto;
     @media screen and (min-device-pixel-ratio: 2),
     screen and (min-resolution: 192dpi),
     screen and (min-resolution: 2dppx) {
        background-image: linear-gradient(rgba(47, 48, 58, 0.4),rgba(47, 48, 58, 0.4)), 
         url("../images/hero/herobg-mobile@2x.jpg"); 
     }
+
 }
 .hero__title{
-    margin: 0 auto;
     font-weight: 900;
     font-size: 26px;
     line-height: 1.61;
@@ -24,16 +23,16 @@
     letter-spacing: 0.06em;
     text-transform: uppercase;
     color: #FFFFFF;
-    // width: 360px;
     margin-bottom: 30px;
 }
 @media screen and (min-width: 480px) {
     .hero{
-    min-width: 480px;
+        min-width: 480px;
     }
     .hero__title{
         width: 360px;
-        margin: auto;
+        margin-left: auto;
+        margin-right: auto;
     }
 }
 @media screen and (min-width: 768px){
@@ -53,6 +52,7 @@
     .hero{
         padding-top: 200px;
         padding-bottom: 200px;
+        margin-bottom: 94px;
         min-width: 1200px;
         background-image: linear-gradient(rgba(47, 48, 58, 0.4),rgba(47, 48, 58, 0.4)), 
         url("../images/hero/herobg-desktop.jpg");
