--- a/css/main.css
+++ b/css/main.css
@@ -864,7 +864,6 @@ img {
 }
 
 .team-card__img {
-  margin: 0 auto;
   max-width: 100%;
 }
 
@@ -926,32 +925,42 @@ img {
     margin-bottom: 50px;
   }
 }
+.clients {
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+
 .clients__title {
   text-align: center;
-  font-family: var(--main-font);
   font-weight: 700;
-  font-size: 36px;
-  line-height: 42px;
-  text-align: center;
+  font-size: 28px;
+  line-height: 1.27;
   letter-spacing: 0.03em;
-  margin-bottom: 50px;
+  margin-bottom: 30px;
 }
 
 .clients__list {
   display: flex;
-  justify-content: space-between;
+  flex-wrap: wrap;
+  gap: 26px;
+  justify-content: center;
 }
 
 .clients__conteiner {
-  width: 170px;
-  height: 92px;
+  padding: 16px 52px;
   border: 1px solid rgb(175, 177, 184);
+  border-radius: 4px;
   display: flex;
   justify-content: center;
   align-items: center;
 }
+.clients__conteiner:focus, .clients__conteiner:hover {
+  border-color: var(--accent-color);
+}
 
 .clients__icon {
+  width: 106px;
+  height: 60px;
   fill: rgb(175, 177, 184);
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -959,6 +968,20 @@ img {
   fill: var(--accent-color);
 }
 
+@media screen and (min-width: 768px) {
+  .clients__conteiner {
+    padding: 16px 60px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .clients {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
+  .clients__conteiner {
+    padding: 16px 32px;
+  }
+}
 .footer {
   background-color: rgb(47, 48, 58);
 }
