--- a/css/portfolio.css
+++ b/css/portfolio.css
@@ -68,6 +68,14 @@ img {
   .conteiner {
     width: 768px;
   }
+  .footer .conteiner {
+    padding-left: 76px;
+    padding-right: 90px;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: baseline;
+    justify-content: center;
+  }
 }
 @media screen and (min-width: 1200px) {
   .conteiner {
@@ -75,6 +83,12 @@ img {
   }
   .header .conteiner {
     align-items: baseline;
+  }
+  .footer .conteiner {
+    padding-left: 15px;
+    padding-right: 15px;
+    justify-content: flex-start;
+    flex-wrap: nowrap;
   }
 }
 .logo {
@@ -88,10 +102,6 @@ img {
 .logo:hover, .logo:focus {
   text-decoration: underline;
 }
-.footer .logo {
-  display: block;
-  margin-bottom: 20px;
-}
 
 .logo__light-theme {
   color: var(--primary-color);
@@ -102,12 +112,16 @@ img {
 }
 
 @media screen and (min-width: 768px) {
-  .logo {
+  .header .logo {
     margin-right: 88px;
   }
 }
 @media screen and (min-width: 1200px) {
   .logo {
+    font-size: 26px;
+    line-height: 1.19;
+  }
+  .header .logo {
     margin-right: 93px;
   }
 }
@@ -151,22 +165,18 @@ img {
 }
 
 .email-form__message {
-  font-family: var(--main-font);
   font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.03em;
   text-transform: uppercase;
+  text-align: center;
   color: var(--third-color);
   margin-bottom: 20px;
 }
 
-.email-form__form {
-  display: flex;
-}
-
 .email-form__input {
-  width: 358px;
+  width: 100%;
   height: 50px;
   border: 1px solid rgba(255, 255, 255, 0.3);
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
@@ -174,7 +184,7 @@ img {
   background-color: #2F303A;
   outline: none;
   padding: 16px;
-  margin-right: 12px;
+  margin-bottom: 20px;
   color: var(--third-color);
 }
 .email-form__input::placeholder {
@@ -186,6 +196,7 @@ img {
 }
 
 .email-form__button {
+  margin: 0 auto;
   min-width: 200px;
   height: 50px;
   padding: 10px 28px;
@@ -210,6 +221,24 @@ img {
   margin-left: 10px;
 }
 
+@media screen and (min-width: 768px) {
+  .email-form__input {
+    width: 450px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .email-form__message {
+    text-align: left;
+  }
+  .email-form__form {
+    display: flex;
+  }
+  .email-form__input {
+    width: 358px;
+    margin-right: 12px;
+    margin-bottom: 0;
+  }
+}
 .header {
   padding-top: 10px;
   padding-bottom: 10px;
@@ -439,10 +468,19 @@ img {
 
 .footer {
   background-color: rgb(47, 48, 58);
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+
+.center {
+  text-align: center;
+  margin-bottom: 60px;
 }
 
 .footer__adress-conteiner {
-  margin-right: 70px;
+  display: flex;
+  justify-content: center;
+  margin-top: 20px;
 }
 
 .adress__link {
@@ -450,11 +488,15 @@ img {
   line-height: 1.71;
   letter-spacing: 0.03em;
   color: var(--third-color);
-  margin-bottom: 9px;
+  margin-bottom: 8px;
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .adress__link:hover, .adress__link:focus {
   color: var(--accent-color);
+}
+
+.adress__item {
+  margin-top: 8px;
 }
 
 .adress__link-email,
@@ -470,22 +512,43 @@ img {
 .adress__link-tel:focus {
   color: var(--accent-color);
 }
-
-.adress__item {
-  margin-top: 9px;
+.adress__link-email:not(:first-child),
+.adress__link-tel:not(:first-child) {
+  margin-top: 8px;
 }
 
 .footer__social-links-conteiner {
-  margin-right: 94px;
+  text-align: center;
+  margin-bottom: 60px;
 }
 
 .footer__social-links-text {
-  font-family: var(--main-font);
   font-weight: 700;
   font-size: 14px;
-  line-height: 16px;
+  line-height: 1.14;
   letter-spacing: 0.03em;
   text-transform: uppercase;
   color: var(--third-color);
   margin-bottom: 20px;
+}
+
+@media screen and (min-width: 768px) {
+  .center {
+    margin-right: 164px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .center {
+    text-align: left;
+    margin-bottom: 0;
+    margin-right: 70px;
+  }
+  .footer__social-links-conteiner {
+    margin-bottom: 0;
+    margin-right: 93px;
+    text-align: left;
+  }
+  .adress__item {
+    margin-top: 9px;
+  }
 }/*# sourceMappingURL=portfolio.css.map */
