--- a/sass/base/_conteiner.scss
+++ b/sass/base/_conteiner.scss
@@ -17,7 +17,17 @@
 @media screen and (min-width: 768px) {
     .conteiner{
         width: 768px;
+
+        .footer &{
+        padding-left: 76px;
+        padding-right: 90px;
+        display: flex;
+        flex-wrap: wrap;
+        align-items: baseline;
+        justify-content: center;
     }
+    }
+    
 }
 @media screen and (min-width: 1200px) {
     .conteiner{
@@ -25,6 +35,12 @@
 
             .header &{
                 align-items: baseline;
+            }
+            .footer &{
+                padding-left: 15px;
+                padding-right: 15px;
+                justify-content: flex-start;
+                flex-wrap: nowrap;
             }
     }
 }
