--- a/sass/components/_email-form.scss
+++ b/sass/components/_email-form.scss
@@ -1,19 +1,15 @@
 .email-form__message{
-    font-family: var(--main-font);
     font-weight: 700;
     font-size: 14px;
     line-height: 1.14;
     letter-spacing: 0.03em;
     text-transform: uppercase;
+    text-align: center;
     color: var(--third-color);
     margin-bottom: 20px;
 }
-.email-form__form {
-    display: flex;
-}
-
 .email-form__input {
-    width: 358px;
+    width: 100%;
     height: 50px;
     border: 1px solid rgba(255, 255, 255, 0.3);
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
@@ -21,7 +17,7 @@
     background-color: #2F303A;
     outline: none;
     padding: 16px;
-    margin-right: 12px;
+    margin-bottom: 20px;
     color: var(--third-color);
 
     &::placeholder {
@@ -33,6 +29,7 @@
     }
 }
 .email-form__button {
+    margin: 0 auto;
     min-width: 200px;
     height: 50px;
     padding: 10px 28px;
@@ -54,4 +51,22 @@
 }
 .email-form__icon {
     margin-left: 10px;
+}
+@media screen and (min-width: 768px){
+    .email-form__input{
+        width: 450px;
+    }
+}
+@media screen and (min-width: 1200px){
+    .email-form__message{
+        text-align: left;
+    }
+    .email-form__form{
+        display: flex;
+    }
+    .email-form__input{
+        width: 358px;
+        margin-right: 12px;
+        margin-bottom: 0;
+    }
 }
