--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -1,21 +1,33 @@
 .footer {
     background-color: rgba(47, 48, 58, 1);
+    padding-top: 60px;
+    padding-bottom: 60px;
+
+}
+.center{
+    text-align: center;
+    margin-bottom: 60px;
 }
 .footer__adress-conteiner{
-    margin-right: 70px;
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
 }
 .adress__link {
 font-size: 14px;
 line-height: 1.71;
 letter-spacing: 0.03em;
 color: var(--third-color);
-margin-bottom: 9px;
+margin-bottom: 8px;
 transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
     &:hover,
     &:focus {
     color: var(--accent-color);
     }
+}
+.adress__item{
+    margin-top: 8px;
 }
 .adress__link-email,
 .adress__link-tel{
@@ -29,21 +41,41 @@ transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     &:focus {
     color: var(--accent-color);
     }
-}
-.adress__item{
-    margin-top: 9px;
+    &:not(:first-child){
+        margin-top: 8px;
+    }
 }
 .footer__social-links-conteiner{
-    margin-right: 94px;
-}
+    text-align: center;
+    margin-bottom: 60px;
+}   
 .footer__social-links-text{
-font-family: var(--main-font);
 font-weight: 700;
 font-size: 14px;
-line-height: 16px;
+line-height: 1.14;
 letter-spacing: 0.03em;
 text-transform: uppercase;
 color: var(--third-color);
 margin-bottom: 20px;
 }
-
+@media screen and (min-width: 768px) {
+ 
+    .center{
+        margin-right: 164px;
+    }
+}
+@media screen and (min-width: 1200px){
+    .center{
+        text-align: left;
+        margin-bottom: 0;
+        margin-right: 70px;
+    }
+    .footer__social-links-conteiner{
+        margin-bottom: 0;
+        margin-right: 93px;
+        text-align: left;
+    }
+    .adress__item{
+    margin-top: 9px;
+}
+}
