--- a/sass/components/_modal-form.scss
+++ b/sass/components/_modal-form.scss
@@ -2,11 +2,9 @@
     display: block;
     text-align: center;
     margin-bottom: 12px;
-    font-family: var(--main-font);
-    font-style: normal;
     font-weight: 700;
     font-size: 20px;
-    line-height: 1.15;
+    line-height: 1.5;
     letter-spacing: 0.03em;
 }
 .modal-form {
@@ -74,12 +72,11 @@
     }
 
 }
-
 .modal-form__license-text{
     display: flex;
     font-family: var(--main-font);
-    font-size: 14px;
-    line-height: 1.71;
+    font-size: 12px;
+    line-height: 1.17;
     letter-spacing: 0.03em;
     color: #757575;
     align-items: center;
@@ -129,5 +126,11 @@
     &:focus,
     &:hover{
     background-color: #188CE8; 
+    }
+}
+@media screen and (min-width: 1200px){
+    .modal-form__license-text{
+    font-size: 14px;
+    line-height: 1.71;
     }
 }
