--- a/sass/components/_modal-window.scss
+++ b/sass/components/_modal-window.scss
@@ -3,8 +3,8 @@ position: absolute;
 top: 50%;
 left: 50%;
 transform: translate(-50%, -50%);
-width: 528px;
-height: 580px;
+width: 450px;
+height: 609px;
 background-color: #FFFFFF;
 padding: 40px;
 }
@@ -26,4 +26,10 @@ transition: fill 250ms linear;
     &:hover{
     fill: var(--accent-color);
     }
+}
+@media screen and (min-width: 1200px) {
+    .modal-window{
+    width: 528px;
+    height: 580px;
+    } 
 }
