--- a/sass/layout/_portfolio.scss
+++ b/sass/layout/_portfolio.scss
@@ -2,15 +2,13 @@
 padding-top: 60px;
 padding-bottom: 60px;
 }
-
 .filter-button-set{
 display: flex;
-justify-content: flex-start;
 flex-wrap: wrap;
 margin-bottom: 25px;
 }
 .filter-button-set__item{
-margin-bottom: 15px;
+margin-bottom: 14px;
 
     &:not(:last-child){
     margin-right: 8px;
@@ -60,7 +58,7 @@ font-size: 18px;
 line-height: 1.56;
 letter-spacing: 0.03em;
 color: #FFFFFF;
-padding: 63px 24px;
+padding: 77px 24px;
 height: 100%;
 overflow: auto;
 transform: translateY(100%);
@@ -72,9 +70,9 @@ transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
 }
 .portfolio-card-set__title-conteiner{
-padding: 20px 24px;
 border: 1px solid #EEEEEE;
 border-top: none;
+padding: 20px 24px;
 }
 .portfolio-card-set__title {
 font-weight: 700;
@@ -90,5 +88,40 @@ line-height: 1.88;
 letter-spacing: 0.03em;
 color: var(--secondary-color)
 }
-
-
+@media screen and (min-width: 768px) {
+    .filter-button-set{
+        justify-content: center;
+        margin-bottom: 0;
+    }
+    .portfolio-card-set{
+        display: flex;
+        flex-wrap: wrap;
+        gap: 30px;
+    }
+    .portfolio-card-set__item{
+        display: flex;
+        max-width: 354px;
+        &:not(:last-child){
+        margin-bottom: 0;
+        }
+    }
+    .portfolio-card-set__link{
+        display: flex;
+        flex-direction: column;
+    }
+    .portfolio-card-set__title-conteiner{
+        flex-grow: 1;
+    }
+}
+@media screen and (min-width: 1200px){
+     .portfolio{
+    padding-top: 94px;
+    padding-bottom: 94px;
+    }
+    .filter-button-set{
+    margin-bottom: 36px;
+}   
+    .portfolio-card-set{
+    justify-content: center;
+    }
+}
