mobile-menu fixed

--- a/css/main.css
+++ b/css/main.css
@@ -175,6 +175,8 @@ img {
   transform: translateY(-100%) translateX(-50%);
   transition: transform 250ms linear;
   overflow: scroll;
+  display: flex;
+  flex-direction: column;
 }
 
 .mobile-menu__button {
@@ -250,8 +252,12 @@ img {
 
 .mobile-menu-social {
   display: flex;
+  flex-wrap: wrap;
 }
 
+.mobile-menu-social__item {
+  margin-bottom: 15px;
+}
 .mobile-menu-social__item:not(:first-child) {
   margin-left: 10px;
 }
