--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -12,8 +12,8 @@
     overflow: scroll;  
     display: flex;
     flex-direction: column;
+    z-index: 2;
 }
-
 .mobile-menu__button{
     position: absolute;
     background-color: transparent;
